<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <TextView
            android:text="@string/origen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BuscarOrigen"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtOrigen"
            android:layout_weight="1" />

        <TextView
            android:text="@string/destino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BuscarDestino"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDestino"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <TextView
            android:text="@string/plazas_libres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BuscarPlazas"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPlazas"
            android:layout_weight="1" />

        <TextView
            android:text="@string/precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BuscarPrecio"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPrecio"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <TextView
            android:text="@string/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BuscarFecha"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtFecha"
            android:layout_weight="1" />

        <TextView
            android:text="@string/hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BuscarHora"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtHora"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>