<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reservar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.migel.proyectointegrador2dambueno.ReservarActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/origen"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text1"
        android:layout_marginTop="38dp"
        android:text="@string/destino"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginTop="45dp"
        android:text="@string/fecha"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/destinoRes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text2"
        android:layout_alignLeft="@+id/origenRes"
        android:layout_alignStart="@+id/origenRes"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/fechaRes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text3"
        android:layout_alignEnd="@+id/destinoRes"
        android:layout_alignRight="@+id/destinoRes"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:text="" />


    <EditText
        android:id="@+id/RestarViaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:ems="5"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnReservarRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/green_button"
        android:onClick="reservar"
        android:text="@string/btn_reservar" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text4"
        android:layout_marginTop="39dp"
        android:text="@string/plazas_libres"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/precioRes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fechaRes"
        android:layout_alignStart="@+id/fechaRes"
        android:layout_alignTop="@+id/text7"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/plazasRes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text6"
        android:layout_alignLeft="@+id/horaRes"
        android:layout_alignStart="@+id/horaRes"

        android:text=""
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/origenRes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text1"
        android:layout_alignBottom="@+id/text1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/horaRes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text4"
        android:layout_alignBottom="@+id/text4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/text7"
        android:layout_below="@+id/text3"
        android:layout_marginTop="23dp"
        android:text="@string/hora"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/text2"
        android:layout_below="@+id/text6"
        android:layout_marginTop="42dp"
        android:text="@string/precio"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/precioRes"
        android:layout_marginTop="34dp"
        android:text="@string/reservar_pregunta"
        android:textSize="18sp" />

</RelativeLayout>
