<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.migel.proyectointegrador2dambueno.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/salida"
        android:layout_marginTop="26dp"
        android:text="@string/lug_llegada"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plazas_libres"
        android:textSize="24sp"
        android:layout_above="@+id/txtFecha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="36dp" />

    <Spinner
        android:id="@+id/plazasRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:dropDownWidth="match_parent"
        android:entries="@array/plazas"
        android:gravity="center_vertical|center_horizontal|center"
        android:scrollbarSize="24dp"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/txtHora"
        android:layout_width="175dp"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/hora"
        android:inputType="time"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/txtFecha"
        android:layout_alignBottom="@+id/txtFecha"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/salida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/origen"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/destino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:entries="@array/destinos"
        android:scrollbarSize="24dp" />

    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPrecio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp"
        android:layout_toLeftOf="@+id/txtHora"
        android:layout_toStartOf="@+id/txtHora"
        android:ems="10"
        android:hint="@string/fecha"
        android:inputType="date"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnModViaje"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="61dp"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="number"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnModViaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ok"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnBorrarViaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borrar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>