<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.migel.proyectointegrador2dambueno.MainActivity$PlaceholderFragment"
    android:background="@drawable/fondo2">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rbno"
        android:id="@+id/radiogroup"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/destino"
        android:layout_toRightOf="@+id/fumador"
        android:layout_toEndOf="@+id/fumador"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp">

    </RadioGroup>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/plazas"
        android:id="@+id/plazasRes"
        android:spinnerMode="dialog"
        android:dropDownWidth="match_parent"
        android:gravity="center_vertical|center_horizontal|center"
        android:textAlignment="center"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/txtHora"
        android:textSize="24sp"
        android:hint="@string/hora"
        android:layout_alignBaseline="@+id/txtFecha"
        android:layout_alignBottom="@+id/txtFecha"
        android:layout_toRightOf="@+id/txtFecha"
        android:layout_toEndOf="@+id/txtFecha" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/salida"
        android:hint="@string/origen"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />

    <TextView
        android:text="@string/lug_llegada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="24sp"
        android:layout_below="@+id/salida"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/checkbox_on_background"
        android:id="@+id/publicarViaje"
        app:backgroundTint="@color/colorAccent"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/destino"
        android:entries="@array/destinos"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/txtFecha"
        android:hint="@string/fecha"
        android:textSize="24sp"
        android:layout_below="@+id/radiogroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etPrecio"
        android:hint="@string/precio"
        android:textSize="24sp"
        android:layout_below="@+id/txtHora"
        android:layout_alignRight="@+id/txtHora"
        android:layout_alignEnd="@+id/txtHora"
        android:layout_marginTop="31dp" />

    <TextView
        android:text="@string/plazas_libres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="24sp"
        android:layout_below="@+id/etPrecio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

</RelativeLayout>
